fixes according to pull request 4

--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "yup": "^1.2.0"
   },
   "scripts": {
+    "cs": "vendor/bin/phpcs --standard=WordPress .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run cs",
+      "pre-push": "npm run cs"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "prettier": "3.0.1"
   }
 }
