--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "constants": "^0.0.2",
     "formik": "^2.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
